# TVV

./: README.md  auto-imports.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Public/Loading/: index.css
Src/: App.scss  App.ts  main.ts
Src/Common/HeaderBar/: HeaderBar.scss  HeaderBar.ts  HeaderBar.vue
Src/Decorators/: DR.ts  TComponent.ts  TEntity.ts  TManager.ts  TRouter.ts  TTool.ts  TWindow.ts
Src/Instructions/: I.ts
Src/Libs/: AActor.ts  Component.ts  Entity.ts  FieldObserver.ts
Src/Plugins/: Debug.ts  FieldObserver.ts  Renderer.ts
Src/Preload/: Preload.ts
Src/Router/: index.ts
Src/Types/: Renderer.d.ts
Src/Utils/: FieldObserver.ts
Src/Views/Application/: Application.scss  Application.ts  Application.vue
Src/Views/Empty/: Empty.scss  Empty.ts  Empty.vue
Src/Views/Tray/: Tray.ts  Tray.vue
public/: Config.js
src/: App.scss  App.ts  App.vue  Config.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Extra/Libs/Models/Example/: tt.model3.json
src-tauri/Extra/Scripts/Application/: Custom.js
src-tauri/Extra/Scripts/Tray/: Custom.js
src-tauri/Need/ChildProcesses/: Custom.js  Log.js  Push.js
src-tauri/Need/ChildProcesses/Application/: Log.js  Push.js
src-tauri/Need/ChildProcesses/Extra/: Custom.js  Log.js  Push.js
src-tauri/Need/ChildProcesses/Tray/: Log.js  Push.js
src-tauri/Need/Simulator/: 2024-01-31_15-41-12.json  2024-01-31_16-07-58.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/Addon/: Automatic.rs  Image.rs  Monitor.rs  Power.rs  Serve.rs  Window.rs  mod.rs
src-tauri/src/Extra/: Automatic.rs  Autopilot.rs  Handler.rs  Power.rs  Serve.rs  Setup.rs  Singleton.rs  Tray.rs  Window.rs  mod.rs
src/common/HeaderBar/: HeaderBar.scss  HeaderBar.ts  HeaderBar.vue
src/common/Transformable/: Transformable.ts
src/decorators/: DR.ts
src/libs/: AActor.ts
src/plugins/: AppRequest.ts  Config.ts  FieldObserver.ts  Renderer.ts
src/router/: index.ts
src/types/: Ammo.d.ts  Config.d.ts  Renderer.d.ts
src/views/Application/: Application.scss  Application.ts  Application.vue
src/views/Empty/: Empty.ts  Empty.vue
src/views/Extra/: Extra.scss  Extra.ts  Extra.vue
src/views/Extra/Children/Code/: Code.scss  Code.ts  Code.vue
src/views/Extra/Children/ImagePreview/: ImagePreview.scss  ImagePreview.ts  ImagePreview.vue
src/views/Extra/Children/ModelPreview/: ModelPreview.scss  ModelPreview.ts  ModelPreview.vue
src/views/Extra/Children/ModelPreview/Core/: Type.ts
src/views/Extra/Children/ModelPreview/Core/Components/: BoxRigidBody.ts  SphereRigidBody.ts
src/views/Extra/Children/ModelPreview/Core/Manager/: EntityPool.ts  Gameloop.ts  Generate.ts  InputSystem.ts  Physics.ts  Time.ts  WebGLWorld.ts
src/views/Extra/Children/ModelPreview/Core/Objects/: Component.ts  Entity.ts
src/views/Extra/Children/ModelPreview/Core/Runtime/: Box.ts  Character.ts  DynamicBox.ts  DynamicSphere.ts  Plane.ts  Sphere.ts
src/views/Extra/Children/Simulator/: Simulator.scss  Simulator.ts  Simulator.vue  Type.ts
src/views/Extra/Children/Simulator/Components/Avatar/: Avatar.vue
src/views/Extra/Children/Simulator/Components/Inspector/: Inspector.scss  Inspector.ts  Inspector.vue
src/views/Extra/Children/Simulator/Components/Panel/: Panel.scss  Panel.ts  Panel.vue
src/views/Extra/Children/Simulator/Core/: Type.ts
src/views/Extra/Children/Simulator/Core/Behaviour/: Entity.ts  KeyboardClick.ts  KeyboardToggle.ts  Main.ts  MouseClick.ts  MouseDown.ts  MouseMove.ts  MouseUp.ts  WriteText.ts
src/views/Extra/Children/TablePreview/: TablePreview.scss  TablePreview.ts  TablePreview.vue
src/views/Tool/Children/Live2D/: Live2D.scss  Live2D.ts  Live2D.vue
src/views/Tool/Children/Suspend/Components/Draw/: Draw.ts
src/views/Tool/Children/Suspend/Components/Draw/Components/Function/: Function.ts
src/views/Tray/: Tray.scss  Tray.ts  Tray.vue
src/views/Vessel/: Vessel.ts  Vessel.vue
