[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [ "window-unmaximize", "window-maximize", "http-all", "window-set-ignore-cursor-events", "clipboard-all", "dialog-all", "window-close", "window-set-position", "window-set-always-on-top", "window-center", "window-set-size", "window-hide", "window-create", "window-show", "window-start-dragging", "window-minimize", "window-set-focus", "process-all", "global-shortcut-all", "shell-all", "protocol-all", "fs-all", "path-all", "system-tray", "icon-ico" ] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.2"
actix-files = "0.6.6"
actix-web = "4.9.0"
port_check = "0.2.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
custom-protocol = ["tauri/custom-protocol"]
